Fixed overflow issue
-wrapped paragraphs in container div with set height smaller than 
article max heigh
-set overflow to scroll
-this lets me keep open/close animation

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -18,6 +18,13 @@
     margin: 15px 0 0;
   }
 
+  .article-content{
+    height: 350px;
+    overflow: scroll;
+    margin-bottom: 10px;
+    margin-top: 12px;
+  }
+
   .date {
     margin: 0;
     font-size: 14px;
